# HayLabAnalysis

./: . readthedocs.yml  .gitignore  .readthedocs.yaml  Example_glm_script.R  Example_glm_script_cheeseboard.R  LFPChannels_perMice.xlsx  LICENSE  README.md  README.rst  RELEASE_NOTES.md  Script_duration_proportion_sleep.R  Stats_glm_ VigitStats.R  UPGRADE.md  Untitled-1.ipynb  autoProcessing_minian.sh  createV4Subfolders.sh  output.xlsx  pyproject.toml  requirements.txt
Contrib/: jupyterqt_simple.py  mainGUI.py  mainGUIother.py  mbDevTools.py  requirements.txt
Contrib/ephyviewer/: myqt.py
HayLabAnalysis/: tools.py
HayLabAnalysis/core/: __init__.py  tools.py
bash/: autoProcessing_dlc.sh  autoProcessing_minian.sh  compressAVIfiles.sh  compress_avi_files.sh  convert_dat_to_pkl.sh  convertpkl2parquet.sh  createV4Subfolders.sh  create_V4Subfolders.sh  delete_files.sh  mergeAVIfiles.sh  move2mtn_files.sh  notification.sh
bash/.ipynb_checkpoints/: autoProcessing_dlc-checkpoint.sh
docs/: conf.py  index.md  index.rst  installations.rst  requirements.in  requirements.txt
python/: # # Associate Ca2+ signal with sleep sta.py  0AB_RawDATANumpyViewer.ipynb  0AB_RawDATANumpyViewer_forCamille.ipynb  0_RawDATANumpyViewer.ipynb  0_RawDATANumpyViewer2.ipynb  0_RawDATANumpyViewer_NPX.ipynb  0_RawDATANumpyViewer_bis.ipynb  10AB_ValidateMinianOutput.ipynb  10_ValidateMinianOutput.ipynb  10bis_ValidateMinianOutput.ipynb  11AB_Sleep scoring.py  11BIS_Sleepscoring.ipynb  11_Sleep scoring.py  11_Sleep scoringAH.py  11_SleepScoring.ipynb  12ABmodif_AssociateMinianSleepScore.ipynb  12S_AssociateMultipleMinianSleepScore.ipynb  12_13AB_AssociateMinianSleepScore.ipynb  12_13AB_AssociateMinianSleepScore.py  12_13AB_AssociateMinianSleepScore_FullAuto.py  12_13_AssociateMinianSleepScore.ipynb  12_13_AssociateMinianSleepScore_FullAuto.py  12_AssociateMinianSleepScore.ipynb  12bis_AssociateMultipleMinianSleepScore.ipynb  13AB_VariabilityAcrossVigilanceState.ipynb  13_VariabilityAcrossVigilanceState.ipynb  14_16AB_AssociationCa2DownStatesSpindSWR_FullAuto.py  14_16AB_AssociationCa2SpindSWR.ipynb  14_16AB_AssociationCa2SpindSWR_FullAuto.py  14_16_AssociationCa2DownStatesSpindSWR_FullAuto.py  14_AssociationCa2SpindSWR.ipynb  14bis_AssociationCa2SpindSWR.ipynb  14terABnotuseable_AssociationCa2SpindSWR.ipynb  14ter_AssociationCa2SpindSWR.ipynb  15AB_CorrectMetadata.ipynb  15_CorrectMetadata.ipynb  16bis_AssociationCa2SWR 2.ipynb  16bis_AssociationCa2SWR.ipynb  16ter_AssociationCa2SWR 2.ipynb  16ter_AssociationCa2SWR.ipynb  (+259 more)
python/.ipynb_checkpoints/: 8_SynchroEphysMiniscope-checkpoint.ipynb
python/Old_scripts/: 11_Sleep scoring.py  12_13_AssociateMinianSleepScore_FullAuto.py  14_16_AssociationCa2DownStatesSpindSWR_FullAuto.py  18_WakeSleepSWR.ipynb  19_PhTonREM.ipynb  20_EventsLeftRight.ipynb  23_24_GrandAverage&Stats_for_VigilanceStates_FullAuto.py  25_28_GrandAverage&Stats_for_DownStatesSpdl&SWR_FullAuto.ipynb  2_WakeRemoving.py  32_SleepScoringGUI.ipynb  33_CalciumTracesGUI.ipynb  35_OscillationsLFPsRawTraces.py  39_MergeOsc.ipynb  3_4_DownState&SWR&SpdlExtraction_FullAuto.py  3_SWRextraction.ipynb  40_PlotHeatmaps.ipynb  42_PlotSpdlResponse.ipynb  43_OscCoupling.ipynb  8_SynchroEphysMiniscope.ipynb  _MINI&OE_2_create_neuron_clusters.ipynb  _MINI&OE_3_average_correlations.ipynb  _MINI&OE_5_vizualise_correlations.ipynb
python/mbTools/: __init__.py  experiments.py  localConfig.ini  localConfigurations.py  mbTools.py  tools.py
src/HayLabAnalysis/: __init__.py  experiments.py  localConfig.ini  localConfigurations.py  tools.py
tests/: test_experiment.py  test_smoke.py
(+28 files in other folders)
