[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "HayLabAnalysis"
version = "0.0.5" #dynamic = ["version"]
authors = [
  { name="Melodie Borel", email="melodieborel@syntuitio.com" },
]
description = "A package with all tools to analyse ePhys dependencies data acquired in A. Hay lab"
readme = "README.rst"
requires-python = "~=3.11.0"
keywords = ["ePhy", "calcium imaging"]
dependencies = [
    "ipyfilechooser",
    "jupyter_bokeh",
    "ipykernel",
    "ephyviewer @ git+https://github.com/melodieborel/ephyviewer.git",
    "PySide6",
    "pyqtgraph == 0.13.3",
    "numpy",
    "scipy",
    "matplotlib",
    "Neo",
    "pandas",
    "spikeinterface",
    "dask",
    "xarray",
    "quantities",
    "pickleshare",
    "open-ephys-python-tools",
    "ipympl",
    "openpyxl",
    "minian @ git+https://github.com/melodieborel/minian.git@python311"
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["HayLabAnalysis"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]